# AliceO2

Utilities/: CMakeLists.txt
Utilities/DataDistribution/: CMakeLists.txt  README.md
Utilities/DataDistribution/Common/include/Common/: DataModelUtils.h  ReadoutDataModel.h  SubTimeFrameDataModel.h  SubTimeFrameUtils.h  SubTimeFrameVisitors.h  Utilities.h
Utilities/DataDistribution/Common/src/: ReadoutDataModel.cxx  SubTimeFrameDataModel.cxx  SubTimeFrameUtils.cxx  SubTimeFrameVisitors.cxx
Utilities/DataDistribution/ReadoutEmulator/include/ReadoutEmulator/: ReadoutDevice.h
Utilities/DataDistribution/ReadoutEmulator/src/: CruEmulator.cxx  CruMemoryHandler.cxx  ReadoutDevice.cxx  runReadoutEmulatorDevice.cxx
Utilities/DataDistribution/SubTimeFrameBuilder/: CMakeLists.txt
Utilities/DataDistribution/SubTimeFrameBuilder/include/SubTimeFrameBuilder/: SubTimeFrameBuilderDevice.h  SubTimeFrameBuilderInput.h
Utilities/DataDistribution/SubTimeFrameBuilder/src/: SubTimeFrameBuilderDevice.cxx  SubTimeFrameBuilderInput.cxx  runSubTimeFrameBuilderDevice.cxx
Utilities/DataDistribution/SubTimeFrameSender/: CMakeLists.txt
Utilities/DataDistribution/SubTimeFrameSender/include/SubTimeFrameSender/: SubTimeFrameSenderDevice.h  SubTimeFrameSenderOutput.h
Utilities/DataDistribution/SubTimeFrameSender/src/: SubTimeFrameSenderDevice.cxx  SubTimeFrameSenderOutput.cxx  runSubTimeFrameSenderDevice.cxx
Utilities/DataDistribution/SubTimeFrameTransporter/src/: SubTimeFrameTransporterDevice.cxx
Utilities/DataDistribution/TimeFrameBuilder/: CMakeLists.txt
Utilities/DataDistribution/TimeFrameBuilder/include/TimeFrameBuilder/: TimeFrameBuilderDevice.h  TimeFrameBuilderInput.h
Utilities/DataDistribution/TimeFrameBuilder/src/: TimeFrameBuilderDevice.cxx  TimeFrameBuilderInput.cxx  runTimeFrameBuilderDevice.cxx
Utilities/DataDistribution/mockup/: CMakeLists.txt
Utilities/DataDistribution/mockup/ReadoutShm/: CMakeLists.txt
Utilities/DataDistribution/mockup/ReadoutShm/run/: readout-mockup.json  runReadoutDevice.cxx  runStfBuilderDevice.cxx  runStfHandlerDevice.cxx  startReadoutMockup.sh.in
Utilities/DataDistribution/mockup/ReadoutShm/src/: ReadoutDevice.cxx  ReadoutO2DataModel.cxx  StfBuilderDevice.cxx  StfHandlerDevice.cxx  runReadoutDevice.cxx  runStfBuilderDevice.cxx  runStfHandlerDevice.cxx
Utilities/DataDistribution/run/: flp-epn-dds-topology.xml  readout-emu-flp-epn-chain.json  readout-flp-chain-emu.json  readout-flp-chain.json  startFLPReadoutDataDistEMU.sh.in  startReadoutFLPChain.sh.in  start_Emulator-FLP-EPN.sh.in
Utilities/DataDistribution/run/readout_cfg/: readout_emu.cfg
(+76 files in other folders)
